--- a/app/inicio/configuracion/paso2/creacionSede/page.mdx
+++ b/app/inicio/configuracion/paso2/creacionSede/page.mdx
@@ -6,7 +6,7 @@ import 'react-medium-image-zoom/dist/styles.css'
 
 - Para continuar con la configuración asignaremos una sede de la empresa cliente al operador super admin. En el menú principal a la izquierda de la pantalla se encuentra el botón “Sedes” para ingresar a esta opción.
 
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/botonSedes.webp"
@@ -20,7 +20,7 @@ import 'react-medium-image-zoom/dist/styles.css'
 
 - En la parte superior derecha de la pantalla estará ubicado el botón “Nueva sede” el cual desplegará un formulario el cual tendrá todos los campos necesarios para la correcta creación de una sede.
 
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/botonNuevaSede.webp"
@@ -32,7 +32,7 @@ import 'react-medium-image-zoom/dist/styles.css'
   </Zoom>
 </div>
 <br />
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/formularioSede.webp"
