--- a/app/inicio/configuracion/paso1/creacionSuperAdmin/page.mdx
+++ b/app/inicio/configuracion/paso1/creacionSuperAdmin/page.mdx
@@ -1,21 +1,16 @@
-import Image from 'next/image'
-import Zoom from 'react-medium-image-zoom'
-import 'react-medium-image-zoom/dist/styles.css'
+import { ImageZoom } from 'nextra/components'
 
 # Creación de admin
 
 - Para empezar la configuración de un **nuevo cliente** primero se crea un administrador con todos los permisos, este registro se insertará por medio de Postman.
 
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/CreacionAdmin.webp"
-      alt="Creacion de un usuario administrador"
-      width={800}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/CreacionAdmin.webp"
+    alt="Creacion de un usuario administrador"
+    width={800}
+    height={300}
+  />
 </div>
 
 Este administrador contará con todos los permisos de acceso y acciones para todas las funcionalidades del aplicativo, además no estará asociado a ninguna empresa.
