--- a/app/inicio/configuracion/paso2/asignarSede/page.mdx
+++ b/app/inicio/configuracion/paso2/asignarSede/page.mdx
@@ -6,7 +6,7 @@ import 'react-medium-image-zoom/dist/styles.css'
 
 - Para asignar la nueva empresa al super admin se ingresa a la opción “Operadores”.
 
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/botonOperadores.webp"
@@ -20,7 +20,7 @@ import 'react-medium-image-zoom/dist/styles.css'
 
 - En la tabla estará listado el registro del operador super admin con el que se ha trabajado hasta el momento, encaso de haber más se puede buscar y filtrar por el nombre o documento. Se abre el formulario de edición de nuestro registro con el botón ubicado en el extremo derecho de su fila.
 
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/botonFormulario.webp"
@@ -34,7 +34,7 @@ import 'react-medium-image-zoom/dist/styles.css'
 
 - En el formulario de creación y edición habrá un campo de filtrado donde buscaremos la opcion con la sede previamente creada.
 
-<div className="image-zoom-wrapper">
+<div className="contenedor-imagenes">
   <Zoom>
     <Image
       src="/sedePreviamenteCreada.webp"
