--- a/app/moduloAdministrador/configuracion/empresas/page.mdx
+++ b/app/moduloAdministrador/configuracion/empresas/page.mdx
@@ -1,7 +1,4 @@
-
-import Image from "next/image";
-import Zoom from "react-medium-image-zoom";
-import "react-medium-image-zoom/dist/styles.css";
+import { ImageZoom } from 'nextra/components'
 
 # Empresas
 
@@ -10,32 +7,26 @@ En esta opción se podrá configurar a detalle cada empresa que haga parte del g
 ## Ingreso a la opción 
 Para acceder, debes ingresar a la opción de “Empresas”:
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/empresas.webp"
-      alt="Apartado empresas"
-      width={800}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/empresas.webp"
+    alt="Apartado empresas"
+    width={800}
+    height={300}
+  />
 </div>
 
 ## Crear empresa
 
 Dentro de la opción de **Empresas**, se encuentra disponible un botón con el texto **Nueva empresa**. 
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/nuevaEmpresa.webp"
-      alt="Nueva empresa"
-      width={800}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/nuevaEmpresa.webp"
+    alt="Nueva empresa"
+    width={800}
+    height={300}
+  />
 </div>
 
 Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite la entrada de datos para la creación de una nueva empresa:
@@ -59,16 +50,13 @@ Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite
 - **Logo(Obligatorio):** URL tipo http en el cual esta alojado el logo que usara cada empresa.
 
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/formularioEmpresaVacio.webp"
-      alt="Formulario Empresa"
-      width={600}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/formularioEmpresaVacio.webp"
+    alt="Formulario Empresa"
+    width={600}
+    height={300}
+  />
 </div>
 
 ## Buscar empresa
@@ -76,16 +64,13 @@ Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite
 El campo de búsqueda permite listar empresas a partir de un **nombre**, **dirección**, **teléfono** o **correo** que se digite:
 
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/buscarEmpresa.webp"
-      alt="Buscar empresa"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/buscarEmpresa.webp"
+    alt="Buscar empresa"
+    width={700}
+    height={300}
+  />
 </div>
 
 ### Filtros
@@ -93,74 +78,59 @@ Además, se pueden aplicar los siguientes filtros:
 
 1. Filtro por **estado**: permite filtrar por Todos, Activos o Inactivos.
 
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/filtroEstado.webp"
-      alt="Filtro por estado"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/filtroEstado.webp"
+    alt="Filtro por estado"
+    width={700}
+    height={300}
+  />
 </div>
 
 2. Filtro **Ordenar por**: Permite filtrar por antiguedad.
 
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/filtroOrdenar.webp"
-      alt="Filtro ordenar por"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/filtroOrdenar.webp"
+    alt="Filtro ordenar por"
+    width={700}
+    height={300}
+  />
 </div>
 
 Los resultados de la búsqueda se mostrarán en la tabla principal de la opción, facilitando la visualización y gestión de las diferentes empresas:
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/resultadoFiltro.webp"
-      alt="Resultados del filtro"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/resultadoFiltro.webp"
+    alt="Resultados del filtro"
+    width={700}
+    height={300}
+  />
 </div>
 
 ## Editar empresa 
 
 Una vez localizada la empresa deseada en la tabla de resultados, se encontrará un botón ubicado en el extremo derecho de la fila correspondiente.
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/editarEmpresa.webp"
-      alt="Botón editar empresa"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/editarEmpresa.webp"
+    alt="Botón editar empresa"
+    width={700}
+    height={300}
+  />
 </div>
 
 Al hacer clic en este botón, se abrirá un formulario que mostrará la información detallada del registro seleccionado, permitiendo al usuario editar su información.
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/formularioEditarEmpresa.webp"
-      alt="Formulario para editar empresa"
-      width={600}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/formularioEditarEmpresa.webp"
+    alt="Formulario para editar empresa"
+    width={600}
+    height={300}
+  />
 </div>
 
 ## Cambiar estado de una empresa
@@ -169,28 +139,22 @@ En la fila correspondiente a la empresa encontrada, se ubicará un **interruptor
 
 **Activo:**
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/empresaActiva.webp"
-      alt="Interruptor de empresa activa"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/empresaActiva.webp"
+    alt="Interruptor de empresa activa"
+    width={700}
+    height={300}
+  />
 </div>
 
 **Inactivo:**
 <br />
-<div className="image-zoom-wrapper">
-  <Zoom>
-    <Image
-      src="/empresaInactiva.webp"
-      alt="Interruptor de empresa inactiva"
-      width={700}
-      height={300}
-      unoptimized
-    />
-  </Zoom>
+<div className="contenedor-imagenes">
+  <ImageZoom
+    src="/empresaInactiva.webp"
+    alt="Interruptor de empresa inactiva"
+    width={700}
+    height={300}
+  />
 </div>
