Modulo administrador /seguridads

--- a/app/moduloAdministrador/configuracion/empresas/page.mdx
+++ b/app/moduloAdministrador/configuracion/empresas/page.mdx
@@ -32,22 +32,22 @@ Dentro de la opción de **Empresas**, se encuentra disponible un botón con el t
 Al hacer clic en este botón, se abrirá el siguiente **formulario** que permite la entrada de datos para la creación de una nueva empresa:
 
 - **Tipo Identificación (Obligatorio).**
-- **Numero de identificación(Obligatorio).**
-- **Digito de verificación(Obligatorio).**
-- **Naturaleza jurídica(Campo de selección, Obligatoria):** Puede seleccionar alguna de estas opciones:
+- **Número de identificación (Obligatorio).**
+- **Dígito de verificación (Obligatorio).**
+- **Naturaleza jurídica (Campo de selección, Obligatoria):** Puede seleccionar alguna de estas opciones:
     - Privada
     - Mixta
-    - Publica
-- **Nombre o razón social(Obligatorio).**
+    - Pública
+- **Nombre o razón social (Obligatorio).**
 - **Teléfono (Obligatorio).**
 - **Dirección (Obligatorio).**
 - **Barrio (Obligatorio).**
 - **Municipio (Campo de selección, obligatorio).**
 - **Fax (Obligatorio).**
 - **Email (Obligatorio):** Este es un campo único
-- **Representante legal(Obligatorio)**.
-- **Dominio(Obligatorio):** Dirección URL de dominio.
-- **Logo(Obligatorio):** URL tipo http en el cual esta alojado el logo que usara cada empresa.
+- **Representante legal (Obligatorio).**
+- **Dominio (Obligatorio):** Dirección URL de dominio.
+- **Logo (Obligatorio):** URL tipo http en el cual está alojado el logo que usará cada empresa.
 
 <br />
 <div className="contenedor-imagenes">
@@ -87,7 +87,7 @@ Además, se pueden aplicar los siguientes filtros:
   />
 </div>
 
-2. Filtro **Ordenar por**: Permite filtrar por antiguedad.
+2. Filtro **Ordenar por**: Permite filtrar por antigüedad.
 
 <div className="contenedor-imagenes">
   <ImageZoom
@@ -143,7 +143,7 @@ En la fila correspondiente a la empresa encontrada, se ubicará un **interruptor
   <ImageZoom
     src="/empresaActiva.webp"
     alt="Interruptor de empresa activa"
-    width={700}
+    width={800}
     height={300}
   />
 </div>
@@ -154,7 +154,7 @@ En la fila correspondiente a la empresa encontrada, se ubicará un **interruptor
   <ImageZoom
     src="/empresaInactiva.webp"
     alt="Interruptor de empresa inactiva"
-    width={700}
+    width={800}
     height={300}
   />
 </div>
