--- a/app/moduloAdministrador/configuracion/operadores/page.mdx
+++ b/app/moduloAdministrador/configuracion/operadores/page.mdx
@@ -32,14 +32,14 @@ Dentro de la opción de "Operador", se encuentra disponible un botón con el tex
 
 Al hacer clic en este botón, se abrirá el siguiente formulario que permite la entrada de datos para la creación de un nuevo operador:
 
-- **Tipo Identificación (Campo de selección, Obligatorio).**
-- **Número de identificación(Obligatorio).**
-- **Primer nombre(Obligatorio).**
-- **Segundo Nombre.**
+- **Tipo de identificación (Campo de selección, Obligatorio).**
+- **Número de identificación (Obligatorio).**
+- **Primer nombre (Obligatorio).**
+- **Segundo nombre.**
 - **Primer apellido (Obligatorio).**
 - **Segundo apellido.**
 - **Sexo (Obligatorio).**
-- **Fecha de nacimiento(Obligatorio).**
+- **Fecha de nacimiento (Obligatorio).**
 - **Teléfono (Obligatorio).**
 - **Correo electrónico (Obligatorio).**
 - **Contraseña (Obligatorio).**
@@ -50,7 +50,7 @@ Al hacer clic en este botón, se abrirá el siguiente formulario que permite la 
   <ImageZoom
     src="/formularioOperador.webp"
     alt="Formulario operador"
-    width={800}
+    width={600}
     height={300}
   />
 </div>
