Modulo gestion de citas  /configuracion

--- a/app/moduloAdministrador/configuracion/sedes/page.mdx
+++ b/app/moduloAdministrador/configuracion/sedes/page.mdx
@@ -129,7 +129,7 @@ Dentro de la edición de la sede, se puede acceder a la pestaña "Datos básicos
 
 ### Pestaña "servicios"
 Dentro de la edición de la sede, se puede acceder a la pestaña "Servicios". En esta ventana, se encuentra un campo de búsqueda que permite buscar servicios por código o descripción. Esta pestaña solo está disponible en el módulo de citas.
-*   Al ingresar un término de búsqueda en el campo proporcionado, el sistema filtra automáticamente los servicios disponibles en función del código o la descripción: [¿Cómo crear un servicio?](/moduloGestionCitas)
+*   Al ingresar un término de búsqueda en el campo proporcionado, el sistema filtra automáticamente los servicios disponibles en función del código o la descripción: [¿Cómo crear un servicio?](/moduloGestionCitas/configuracion/servicios)
 <br /> 
 <div className="contenedor-imagenes">
   <ImageZoom
@@ -152,7 +152,7 @@ Dentro de la edición de la sede, se puede acceder a la pestaña "Servicios". En
 </div>
 
 ### Pestaña "Aseguradoras"
-Dentro de la edición de la sede también podemos agregar o eliminar las aseguradoras para la atención de los usuarios afiliados a estas. [¿Cómo crear una Aseguradora?](/moduloGestionCitas)
+Dentro de la edición de la sede también podemos agregar o eliminar las aseguradoras para la atención de los usuarios afiliados a estas. [¿Cómo crear una Aseguradora?](/moduloGestionCitas/configuracion/aseguradoras)
 <br /> 
 <div className="contenedor-imagenes">
   <ImageZoom
